# affective-dialogue-simulator

./: README.md  技术栈选择.md  需求总结.md
backend/: .env.sample  check_status.py  pyproject.toml  verify_project.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  llm_client.py
backend/app/models/: __init__.py  dialogue.py  state.py
backend/app/prompts/: __init__.py  model_a_prompts.py  model_b_prompts.py
backend/app/services/: __init__.py  dialogue_manager.py  model_a.py  model_b.py
backend/cli/: __init__.py  terminal_chat.py
